# autoware_sentinel

./: .env  .envrc  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  justfile  west.yml
.config/: nextest.toml  zenoh_router.json5  zenoh_session.json5
docs/: known-runtime-issues.md  safety-island-overview.md
docs/guides/: orin-spe-setup.md  zephyr-setup.md
docs/presentations/: generate_safety_pptx.py  nano-ros-safety-features.md  nano-ros-safety-features.pptx  safety-island-overview.md  safety-island-overview.pptx
docs/research/: ecu-deployment-patterns.md  zenoh-pico-drive-latency.md
docs/roadmap/: phase-1-foundation.md  phase-10-actuation-porting-lessons.md  phase-11-orin-spe.md  phase-12-service-topic-parity.md  phase-2-emergency-response.md  phase-3-safety-gate.md  phase-4-validation.md  phase-5-verification.md  phase-6-zephyr-application.md  phase-7-integration-testing.md  phase-8-topic-parity.md  phase-9-behavioral-verification.md
scripts/: activate_autoware.sh  auto_drive.py  build_rmw_zenoh.sh  capture_poses.py  filter_autoware_record.sh  poses.yaml  record_bag.sh  record_baseline.sh  record_topics.txt
scripts/spe/: download-bsp.sh
scripts/zephyr/: setup-network.sh  setup.sh
src/autoware_control_validator/: Cargo.toml  justfile  package.xml
src/autoware_control_validator/.cargo/: config.toml
src/autoware_control_validator/src/: accel.rs  jerk.rs  lib.rs  lowpass.rs  velocity.rs
src/autoware_heartbeat_watchdog/: Cargo.toml  justfile  package.xml
src/autoware_heartbeat_watchdog/.cargo/: config.toml
src/autoware_heartbeat_watchdog/src/: lib.rs
src/autoware_interpolation/: Cargo.toml  justfile  package.xml
src/autoware_interpolation/.cargo/: config.toml
src/autoware_interpolation/src/: lib.rs
src/autoware_motion_utils/: .gitignore  Cargo.toml  justfile  package.xml
src/autoware_motion_utils/.cargo/: config.toml
src/autoware_motion_utils/src/: lib.rs
src/autoware_mpc_lateral_controller/: Cargo.toml  package.xml
src/autoware_mpc_lateral_controller/src/: lib.rs  mat.rs  mpc.rs  vehicle_model.rs
src/autoware_mrm_comfortable_stop_operator/: Cargo.toml  justfile  package.xml
src/autoware_mrm_comfortable_stop_operator/.cargo/: config.toml
src/autoware_mrm_comfortable_stop_operator/src/: lib.rs
src/autoware_mrm_emergency_stop_operator/: Cargo.toml  justfile  package.xml
src/autoware_mrm_emergency_stop_operator/src/: lib.rs
src/autoware_mrm_handler/: Cargo.toml  justfile  package.xml
src/autoware_mrm_handler/.cargo/: config.toml
src/autoware_mrm_handler/src/: lib.rs
src/autoware_operation_mode_transition_manager/: Cargo.toml  justfile  package.xml
src/autoware_operation_mode_transition_manager/.cargo/: config.toml
src/autoware_operation_mode_transition_manager/src/: lib.rs
src/autoware_pid_longitudinal_controller/: Cargo.toml  package.xml
src/autoware_pid_longitudinal_controller/.cargo/: config.toml
src/autoware_pid_longitudinal_controller/src/: lib.rs  lowpass_filter.rs  pid.rs  smooth_stop.rs
src/autoware_sentinel/: CMakeLists.txt  Cargo.toml  justfile  package.xml  prj.conf
src/autoware_sentinel/.cargo/: config.toml
src/autoware_sentinel/boards/: native_sim_native_64.conf
src/autoware_sentinel/src/: lib.rs
src/autoware_sentinel_linux/: Cargo.toml  justfile  package.xml
src/autoware_sentinel_linux/.cargo/: config.toml
src/autoware_sentinel_linux/src/: main.rs  params.rs
src/autoware_shift_decider/: Cargo.toml  justfile  package.xml
src/autoware_shift_decider/.cargo/: config.toml
src/autoware_shift_decider/src/: lib.rs
src/autoware_stop_filter/: Cargo.toml  justfile  package.xml
src/autoware_stop_filter/.cargo/: config.toml
src/autoware_stop_filter/src/: lib.rs
src/autoware_trajectory_follower_base/: Cargo.toml  package.xml
src/autoware_trajectory_follower_base/src/: lib.rs
src/autoware_trajectory_follower_node/: Cargo.toml  package.xml
src/autoware_trajectory_follower_node/.cargo/: config.toml
src/autoware_trajectory_follower_node/src/: lib.rs  traj_utils.rs
src/autoware_twist2accel/: Cargo.toml  justfile  package.xml
src/autoware_twist2accel/src/: lib.rs
src/autoware_universe_utils/: Cargo.toml  justfile  package.xml
src/autoware_universe_utils/src/: lib.rs
src/autoware_vehicle_cmd_gate/: Cargo.toml  justfile  package.xml
src/autoware_vehicle_cmd_gate/src/: filter.rs  gate.rs  heartbeat.rs  lib.rs
src/autoware_vehicle_info_utils/: Cargo.toml  justfile  package.xml
src/autoware_vehicle_info_utils/src/: lib.rs
src/autoware_vehicle_velocity_converter/: Cargo.toml  justfile  package.xml
src/autoware_vehicle_velocity_converter/.cargo/: config.toml
src/autoware_vehicle_velocity_converter/src/: lib.rs
src/verification/: Cargo.toml
src/verification/src/: emergency_stop.rs  ghost_types.rs  lib.rs  mrm_handler.rs  shift_decider.rs
tests/: Cargo.toml
tests/src/: autoware.rs  lib.rs  process.rs  ros2.rs
tests/src/fixtures/: autoware_launcher.rs  mod.rs  sentinel.rs  zenohd_router.rs
tests/tests/: auto_drive_comparison.rs  controller_node.rs  planning_simulator.rs  transport_smoke.rs  zephyr_native_sim.rs
