[workspace]
resolver = "2"
exclude = [
    "tests",
    "src/autoware_sentinel",
    "src/verification",
]
members = [
    "src/autoware_control_validator",
    "src/autoware_heartbeat_watchdog",
    "src/autoware_interpolation",
    "src/autoware_motion_utils",
    "src/autoware_mpc_lateral_controller",
    "src/autoware_mrm_comfortable_stop_operator",
    "src/autoware_mrm_emergency_stop_operator",
    "src/autoware_mrm_handler",
    "src/autoware_operation_mode_transition_manager",
    "src/autoware_pid_longitudinal_controller",
    "src/autoware_sentinel_linux",
    "src/autoware_shift_decider",
    "src/autoware_stop_filter",
    "src/autoware_trajectory_follower_base",
    "src/autoware_trajectory_follower_node",
    "src/autoware_twist2accel",
    "src/autoware_universe_utils",
    "src/autoware_vehicle_cmd_gate",
    "src/autoware_vehicle_info_utils",
    "src/autoware_vehicle_velocity_converter",
]
# Excluded from workspace:
#   src/autoware_sentinel  — Zephyr target, built via west
#   src/verification       — Verus proofs, standalone
#   tests                  — nextest integration tests, standalone

[patch.crates-io]
# nano-ros — all internal crates (nros-core, nros-node, zpico-sys, etc.) are resolved
# automatically from the same git repo via cargo workspace dependency resolution.
nros = { git = "https://github.com/jerry73204/nano-ros.git", rev = "17397f2a" }
nros-core = { git = "https://github.com/jerry73204/nano-ros.git", rev = "17397f2a" }
nros-serdes = { git = "https://github.com/jerry73204/nano-ros.git", rev = "17397f2a" }

# Generated message packages (from sentinel_linux — the superset of all packages)
autoware_adapi_v1_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_adapi_v1_msgs" }
autoware_adapi_version_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_adapi_version_msgs" }
autoware_common_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_common_msgs" }
autoware_control_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_control_msgs" }
autoware_control_validator = { path = "src/autoware_sentinel_linux/generated/autoware_control_validator" }
autoware_internal_debug_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_internal_debug_msgs" }
autoware_internal_metric_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_internal_metric_msgs" }
autoware_internal_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_internal_msgs" }
autoware_internal_perception_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_internal_perception_msgs" }
autoware_internal_planning_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_internal_planning_msgs" }
autoware_operation_mode_transition_manager = { path = "src/autoware_sentinel_linux/generated/autoware_operation_mode_transition_manager" }
autoware_perception_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_perception_msgs" }
autoware_planning_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_planning_msgs" }
autoware_system_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_system_msgs" }
autoware_vehicle_cmd_gate = { path = "src/autoware_sentinel_linux/generated/autoware_vehicle_cmd_gate" }
autoware_vehicle_msgs = { path = "src/autoware_sentinel_linux/generated/autoware_vehicle_msgs" }
builtin_interfaces = { path = "src/autoware_sentinel_linux/generated/builtin_interfaces" }
diagnostic_msgs = { path = "src/autoware_sentinel_linux/generated/diagnostic_msgs" }
geographic_msgs = { path = "src/autoware_sentinel_linux/generated/geographic_msgs" }
logging_demo = { path = "src/autoware_sentinel_linux/generated/logging_demo" }
geometry_msgs = { path = "src/autoware_sentinel_linux/generated/geometry_msgs" }
nav_msgs = { path = "src/autoware_sentinel_linux/generated/nav_msgs" }
rcl_interfaces = { path = "src/autoware_sentinel_linux/generated/rcl_interfaces" }
sensor_msgs = { path = "src/autoware_sentinel_linux/generated/sensor_msgs" }
shape_msgs = { path = "src/autoware_sentinel_linux/generated/shape_msgs" }
std_msgs = { path = "src/autoware_sentinel_linux/generated/std_msgs" }
std_srvs = { path = "src/autoware_sentinel_linux/generated/std_srvs" }
tier4_control_msgs = { path = "src/autoware_sentinel_linux/generated/tier4_control_msgs" }
tier4_external_api_msgs = { path = "src/autoware_sentinel_linux/generated/tier4_external_api_msgs" }
tier4_system_msgs = { path = "src/autoware_sentinel_linux/generated/tier4_system_msgs" }
tier4_vehicle_msgs = { path = "src/autoware_sentinel_linux/generated/tier4_vehicle_msgs" }
unique_identifier_msgs = { path = "src/autoware_sentinel_linux/generated/unique_identifier_msgs" }
visualization_msgs = { path = "src/autoware_sentinel_linux/generated/visualization_msgs" }

# LLVM SIGSEGV workaround: autoware_adapi_v1_msgs crashes ARM register scavenger
# at opt-level=0. See LLVM #64277.
[profile.dev.package.autoware_adapi_v1_msgs]
opt-level = 1
