[package]
name = "autoware_mpc_lateral_controller"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
autoware_vehicle_info_utils = { path = "../autoware_vehicle_info_utils" }
libm = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
std = []
