<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_mrm_comfortable_stop_operator</name>
  <version>0.1.0</version>
  <description>MRM comfortable stop operator for Autoware</description>
  <maintainer email="example@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>autoware_control_msgs</depend>
  <depend>tier4_system_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
