[package]
name = "autoware_pid_longitudinal_controller"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
autoware_control_msgs = { version = "*", default-features = false }
autoware_planning_msgs = { version = "*", default-features = false }
autoware_vehicle_msgs = { version = "*", default-features = false }
geometry_msgs = { version = "*", default-features = false }
nav_msgs = { version = "*", default-features = false }
autoware_motion_utils = { path = "../autoware_motion_utils" }
autoware_universe_utils = { path = "../autoware_universe_utils" }
autoware_vehicle_info_utils = { path = "../autoware_vehicle_info_utils" }
autoware_interpolation = { path = "../autoware_interpolation" }
libm = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }

[features]
default = []
std = [
    "autoware_control_msgs/std",
    "autoware_planning_msgs/std",
    "autoware_vehicle_msgs/std",
    "geometry_msgs/std",
    "nav_msgs/std",
]
