# Autoware Sentinel — Zephyr Safety Island Application
#
# This crate composes all algorithm libraries into a single Zephyr binary.
# Build with: west build -b native_sim/native/64 autoware-sentinel/src/autoware_sentinel

[package]
# Name must be "rustapp" for zephyr-lang-rust integration
name = "rustapp"
version = "0.1.0"
edition = "2024"
description = "Autoware Sentinel safety island application"
license = "Apache-2.0"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
# Zephyr support from zephyr-lang-rust module
zephyr = "0.1.0"
log = "0.4"

# nros unified API
nros = { version = "*", default-features = false, features = ["rmw-zenoh", "platform-zephyr"] }

# Algorithm crates (Phase 1–4)
autoware_stop_filter = { path = "../autoware_stop_filter" }
autoware_vehicle_velocity_converter = { path = "../autoware_vehicle_velocity_converter" }
autoware_shift_decider = { path = "../autoware_shift_decider" }
autoware_mrm_emergency_stop_operator = { path = "../autoware_mrm_emergency_stop_operator" }
autoware_mrm_comfortable_stop_operator = { path = "../autoware_mrm_comfortable_stop_operator" }
autoware_heartbeat_watchdog = { path = "../autoware_heartbeat_watchdog" }
autoware_mrm_handler = { path = "../autoware_mrm_handler" }
autoware_vehicle_cmd_gate = { path = "../autoware_vehicle_cmd_gate" }
autoware_twist2accel = { path = "../autoware_twist2accel" }
autoware_control_validator = { path = "../autoware_control_validator" }
autoware_operation_mode_transition_manager = { path = "../autoware_operation_mode_transition_manager" }

# Message crates (resolved via [patch.crates-io] in .cargo/config.toml)
autoware_adapi_v1_msgs = { version = "*", default-features = false }
autoware_control_msgs = { version = "*", default-features = false }
autoware_system_msgs = { version = "*", default-features = false }
autoware_vehicle_msgs = { version = "*", default-features = false }
geometry_msgs = { version = "*", default-features = false }
nav_msgs = { version = "*", default-features = false }
tier4_system_msgs = { version = "*", default-features = false }

# Workaround: LLVM SIGSEGV in ARM register scavenger when compiling
# autoware_adapi_v1_msgs at opt-level=0 for thumbv7em-none-eabihf.
# See: https://github.com/llvm/llvm-project/issues/64277
[profile.dev.package.autoware_adapi_v1_msgs]
opt-level = 1

[features]
default = []

[profile.release]
opt-level = "s"
lto = true
debug = false
