<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_sentinel_linux</name>
  <version>0.1.0</version>
  <description>Autoware Sentinel safety island — Linux native binary</description>
  <maintainer email="example@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <!-- Union of all algorithm crate message dependencies -->
  <depend>autoware_adapi_v1_msgs</depend>
  <depend>autoware_control_msgs</depend>
  <depend>autoware_system_msgs</depend>
  <depend>autoware_vehicle_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tier4_control_msgs</depend>
  <depend>tier4_external_api_msgs</depend>
  <depend>tier4_system_msgs</depend>
  <depend>tier4_vehicle_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- Missing parity packages (Phase 12 gap closure) -->
  <depend>autoware_adapi_version_msgs</depend>
  <depend>logging_demo</depend>

  <!-- Debug/diagnostic message packages (Phase 8.2) -->
  <depend>autoware_control_validator</depend>
  <depend>autoware_internal_debug_msgs</depend>
  <depend>autoware_internal_msgs</depend>
  <depend>autoware_operation_mode_transition_manager</depend>
  <depend>autoware_vehicle_cmd_gate</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
