[package]
name = "autoware_shift_decider"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
autoware_control_msgs = { version = "*", default-features = false }
autoware_vehicle_msgs = { version = "*", default-features = false }
autoware_system_msgs = { version = "*", default-features = false }

[features]
default = []
std = ["autoware_control_msgs/std", "autoware_vehicle_msgs/std", "autoware_system_msgs/std"]
