<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_twist2accel</name>
  <version>0.1.0</version>
  <description>Twist to acceleration converter for Autoware</description>
  <maintainer email="example@example.com">Developer</maintainer>
  <license>Apache-2.0</license>

  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
