[package]
name = "autoware_vehicle_velocity_converter"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[dependencies]
autoware_vehicle_msgs = { version = "*", default-features = false }
geometry_msgs = { version = "*", default-features = false }

[features]
default = []
std = ["autoware_vehicle_msgs/std", "geometry_msgs/std"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
