[package]
name = "autoware_verification"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
publish = false

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(verus_keep_ghost_body)',
    'cfg(verus_keep_ghost)',
] }

[dependencies]
vstd = "0.0.0-2026-02-08-0120"
